--- a/bacon.toml
+++ b/bacon.toml
@@ -54,9 +54,14 @@ command = [
 need_stdout = true
 allow_warnings = true
 
+[jobs.vhs]
+command = ["vhs", "examples/text.tape"]
+need_stdout = true
+
 # You may define here keybindings that would be specific to
 # a project, for example a shortcut to launch a specific job.
 # Shortcuts to internal functions (scrolling, toggling, etc.)
 # should go in your personal global prefs.toml file instead.
 [keybindings]
 # alt-m = "job:my-job"
+v = "job:vhs"
