refactor: simplifiy wrapping
- add multi_line example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/joshka/tui-prompts"
 authors = ["Joshka"]
 license = "MIT OR Apache-2.0"
 categories = ["command-line-interface", "gui"]
-keywords = ["cli", "console", "ratatui",  "terminal", "tui"]
+keywords = ["cli", "console", "ratatui", "terminal", "tui"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -23,5 +23,5 @@ indoc = "2.0.1"
 
 [patch.crates-io]
 # take advantage of the latest unreleased ratatui features
-# ratatui = { git = "https://github.com/joshka/ratatui.git", branch = "feat-stylize-all-the-things" }
-#ratatui = { path = "../ratatui" }
+# ratatui = { git = "https://github.com/joshka/ratatui.git", branch = "main" }
+# ratatui = { path = "../ratatui" }
