--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,3 +1,5 @@
+name: Check
+
 on:
   push:
     branches:
@@ -6,6 +8,7 @@ on:
 
 jobs:
   check:
+    name:
     permissions:
       checks: write
     uses: joshka/github-workflows/.github/workflows/rust-check.yml@main
