--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   check:
-    name:
+    name: ""
     permissions:
       checks: write
     uses: joshka/github-workflows/.github/workflows/rust-check.yml@main
