--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ edition = "2021"
 crossterm = "0.27.0"
 itertools = "0.12.1"
 ratatui = "0.26.2"
+ratatui-macros = { version = "0.3.0", path = "../ratatui-macros" }
+rstest = "0.19.0"
 
 [dev-dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
